force-app/main/default/objects/Support_Ticket__c/Support_Ticket__c.object-meta.xml
<CustomObject>
    <label>Support Ticket</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>