force-app/main/default/objects/Support_Ticket__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Tickets</relationshipLabel>
    <relationshipName>Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>