force-app/main/default/objects/Support_Ticket__c/fields/Interaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Count__c</fullName>
    <label>Interaction Count</label>
    <summaryForeignKey>Ticket_Interaction__c.Related_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>