force-app/main/default/objects/Support_Ticket__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <displayFormat>TICKET-{000000}</displayFormat>
    <label>Ticket Number</label>
    <type>AutoNumber</type>
</CustomField>