force-app/main/default/objects/Support_Ticket__c/validationRules/Minimum_Description_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Description_Length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Description__c)&lt;20</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description must be at least 20 characters long.</errorMessage>
</ValidationRule>