force-app/main/default/objects/Support_Ticket__c/validationRules/Require_Resolved_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Resolved_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, &quot;Resolved&quot;),
        ISPICKVAL(Status__c, &quot;Closed&quot;)
    ),
    ISBLANK(Resolved_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Resolved_Date__c</errorDisplayField>
    <errorMessage>Resolved Date must be populated when the Status is Resolved or Closed.</errorMessage>
</ValidationRule>