force-app/main/default/objects/Support_Ticket__c/validationRules/Require_SLA_SerialNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_SLA_SerialNumber</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Customer_Account__r.SLASerialNumber__c)</errorConditionFormula>
    <errorMessage>A Serial Number is required for this Customer Account before saving the Ticket.</errorMessage>
</ValidationRule>